src/test/deca/context/valid/created/cast_compatible/same_type/INT.deca
// Description:
//      Cast d'un type identique
// Resultats:
//      OK

{
    int x = (int)(5);
}