src/test/deca/context/invalid/created/cast_compatible/VOID.deca
// Description:
//      Cast d'un type identique
// Resultats:
//      Erreur contexte Ligne 7 : mismatched input ')' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}

{
    void x = (void)();
}